Fixed horizontal scrolling and typing adjusts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header -->
-    <header>
+    <header class="header">
         <nav class="header-nav">
             <div class="header-container">
                 <div class="header-logo">
@@ -78,7 +78,7 @@
         <section class="section hero" id="hero-section">
             <div class="hero-container">
                 <h1> Hi, I'm a student programmer <br> and I love co<span class="typing" data-count='3000'
-                        data-words='["ding.","ffee."]'>coffee</span></h1>
+                        data-words='["ding.","ffee."]'></span>  :) </h1>
                 <div class="btn-container">
                     <a href="#projects-section" class="btn-projects"> My Projects </a>
                     <a href="#about-section" class="btn-about"> About Me </a>
@@ -109,6 +109,14 @@
                         <img src="images/java-programming-language.svg">
                         <img src="images/sql.svg">
                     </div>
+                    <p> <b> What I use  </b></p>
+                    <div class="sm-container">
+                        <img src="images/mysql.svg">
+                        <img src="images/figma.svg">
+                        <img src="images/adobe-xd.svg">
+                        <img src="images/visual-studio-code.svg">
+                        <img src="images/git.svg">
+                    </div>
                 </div>
             </div>
         </section>
@@ -122,7 +130,7 @@
                         <div class="project">
                             <img src="images/payroll/payroll_panel.jpg" alt="payroll">
                             <div class="title">
-                                <h4>Basic Payroll System</h4>
+                                <header><h4>Basic Payroll System</h4></header> 
                                 <p>
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
                                     incidunt
@@ -155,7 +163,7 @@
                     </li>
                     <li>
                         <div class="project">
-                            <img src="images/mobile/mobile.jpg" alt="payroll">
+                            <img src="images/mobile/mobile.jpg">
                             <div class="title">
                                 <h4>Attendance Recorder</h4>
                                 <p>
@@ -172,9 +180,9 @@
                     </li>
                     <li>
                         <div class="project">
-                            <img src="images/mobile/mobile.jpg" alt="payroll">
+                            <img src="images/stock-trade.png" >
                             <div class="title">
-                                <h4>Attendance Recorder</h4>
+                                <h4>Stock Trading Site</h4>
                                 <p>
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
                                     incidunt
