--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <header class="header">
         <nav class="header-nav">
             <div class="header-container">
-                <div class="header-logo">
+                <a href="#hero-section" class="header-logo">
                     <img src="images/Logo.png" alt="logo">
-                </div>
+                </a>
                 <div class="hamburger-menu">
                     <img src="images/hamburger-menu.svg" alt="menu">
                 </div>
             </div>
             <div class="links-container">
                 <ul class="header-links">
-                    <li> <a href="#about-section"> About Me </a></li>
-                    <li> <a href="#projects-section"> Portfolio </a></li>
-                    <li> <a href="#contact-section"> Contact </a></li>
+                    <li> <a href="#about-section" class="scroll"> About Me </a></li>
+                    <li> <a href="#projects-section" class="scroll"> Portfolio </a></li>
+                    <li> <a href="#contact-section" class="scroll"> Contact </a></li>
                 </ul>
             </div>
         </nav>
@@ -38,36 +38,10 @@
     <div class="modal-overlay">
         <div class="modal-body">
             <div class="modal-title">
-                <!-- <h3> Project Name </h3> -->
+                <h4> </h4>
             </div>
             <img class="close-modal" src="images/close-window.svg">
-            <div class="modal-content">
-                <div class="maintenance-container">
-                    <img src="images/maintenance.svg" alt="maintenance">
-                    <h4> I'm on it! </h4>
-                    <p> This part is still on the works. Will be up soon!</p>
-                </div>
-                <!-- <section class="modal-section">
-                    <article>
-                        <img src="images/payroll/deduc_panel.jpg">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis aliquam vitae minima
-                            eum
-                            beatae. Quas dolorem eos iure at et.
-                        </p>
-                    </article>
-                </section>
-                <section class="modal-section">
-                    <article>
-                        <img src="images/payroll/deduc_panel.jpg">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis aliquam vitae minima
-                            eum
-                            beatae. Quas dolorem eos iure at et.
-                        </p>
-                    </article>
-                </section> -->
-            </div>
+            <div class="modal-content"></div>
         </div>
     </div>
 
@@ -78,12 +52,14 @@
         <section class="section hero" id="hero-section">
             <div class="hero-container">
                 <h1> Hi, I'm a student programmer <br> and I love co<span class="typing" data-count='3000'
-                        data-words='["ding.","ffee."]'></span>  :) </h1>
+                        data-words='["ding.","ffee."]'></span> :) </h1>
                 <div class="btn-container">
-                    <a href="#projects-section" class="btn-projects"> My Projects </a>
-                    <a href="#about-section" class="btn-about"> About Me </a>
+                    <a href="#projects-section" class="btn-projects scroll"> My Projects </a>
+                    <a href="#about-section" class="btn-about scroll"> About Me </a>
                     <div class="btn-container-links">
-                        <a href="https://github.com/JudeBP"><img src="images/github-icon.svg" alt="github"></a>
+                        <a href="https://github.com/JudeBP" target='_blank' rel='noopener noreferrer'>
+                            <img src="images/github-icon.svg" alt="github">
+                        </a>
                         <a href="#contact-section"><img src="images/email-address.svg" alt="email"></a>
                     </div>
                 </div>
@@ -94,12 +70,15 @@
         <section class="section about-me" id="about-section">
             <h2> Who <span class="section-title"> I </span>am </h2>
             <div class="profile-container">
-                <img class="avatar" src="images/avatar.jpg" alt="avatar">
+                <div class="avatar-container">
+                    <img class="avatar" src="images/avatar.jpg" alt="avatar">
+                    <span><img src="images/mail.svg" class="email">: judepasco@gmail.com </span>
+                </div>
                 <div class="profile-description">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos corporis eos animi ex, tenetur
-                        consequuntur iure molestias tempora blanditiis in saepe dolorem, quibusdam cupiditate illo? Et
-                        iusto
-                        ratione possimus harum.
+                    <p> I'm Jude, a junior computer science student at the Polytechnic University of the Philippines.
+                        Most of my big projects are from school created by our group/team and programmed by me.
+                        I'm now starting my focus on web development and will be sharing more big and small projects
+                        soon. :)
                     </p>
                     <div class="sm-container">
                         <img src="images/html.svg">
@@ -109,11 +88,10 @@
                         <img src="images/java-programming-language.svg">
                         <img src="images/sql.svg">
                     </div>
-                    <p> <b> What I use  </b></p>
+                    <!-- <p> <b> What I use </b></p> -->
                     <div class="sm-container">
                         <img src="images/mysql.svg">
                         <img src="images/figma.svg">
-                        <img src="images/adobe-xd.svg">
                         <img src="images/visual-studio-code.svg">
                         <img src="images/git.svg">
                     </div>
@@ -125,78 +103,7 @@
         <section class="section projects" id="projects-section">
             <div class="section-container">
                 <h2> My <span class="section-title">Projects</span></h2>
-                <ul class="projects-container">
-                    <li>
-                        <div class="project">
-                            <img src="images/payroll/payroll_panel.jpg" alt="payroll">
-                            <div class="title">
-                                <header><h4>Basic Payroll System</h4></header> 
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
-                                    incidunt
-                                    nam dolorem saepe ut ex nihil earum repudiandae!
-                                </p>
-                                <div class="btn-container">
-                                    <a href="https://github.com/JudeBP"><img src="images/github-icon.svg"></a>
-                                    <button class="btn-details open-modal"> Details </button>
-                                </div>
-                            </div>
-                        </div>
-
-                    </li>
-                    <li>
-                        <div class="project">
-                            <img src="images/supply_chain/tracker.jpg" alt="payroll">
-                            <div class="title">
-                                <h4>Supply Chain Recorder</h4>
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
-                                    incidunt
-                                    nam dolorem saepe ut ex nihil earum repudiandae!
-                                </p>
-                                <div class="btn-container">
-                                    <a href="https://github.com/JudeBP"><img src="images/github-icon.svg"></a>
-                                    <button class="btn-details open-modal"> Details </button>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="project">
-                            <img src="images/mobile/mobile.jpg">
-                            <div class="title">
-                                <h4>Attendance Recorder</h4>
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
-                                    incidunt
-                                    nam dolorem saepe ut ex nihil earum repudiandae!
-                                </p>
-                                <div class="btn-container">
-                                    <a href="https://github.com/JudeBP"><img src="images/github-icon.svg"></a>
-                                    <button class="btn-details open-modal"> Details </button>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="project">
-                            <img src="images/stock-trade.png" >
-                            <div class="title">
-                                <h4>Stock Trading Site</h4>
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quos voluptatum
-                                    incidunt
-                                    nam dolorem saepe ut ex nihil earum repudiandae!
-                                </p>
-                                <div class="btn-container">
-                                    <a href="https://github.com/JudeBP"><img src="images/github-icon.svg"></a>
-                                    <button class="btn-details open-modal"> Details </button>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-
-                </ul>
+                <ul class="projects-container"> </ul>
             </div>
         </section>
 
@@ -204,10 +111,10 @@
         <section class="section contact" id="contact-section">
             <h2> Keep in touch </h2>
             <form class="contact-form">
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Subject">
-                <textarea name="textarea" cols="30" rows="10" placeholder="What you want to say.."></textarea>
-                <button type="button" class="btn-submit">Submit</button>
+                <input type="text" placeholder="Email" disabled>
+                <input type="text" placeholder="Subject" disabled>
+                <textarea disabled name="textarea" cols="30" rows="10" placeholder="What you want to say.."></textarea>
+                <button type="button" class="btn-submit" disabled>Submit</button>
             </form>
         </section>
     </main>
@@ -215,15 +122,18 @@
     <!-- Footer -->
     <footer>
         <div class="sm-links">
-            <a href="#contact-section"> Email </a>
-            <a href="https://www.facebook.com/judepasco/"> Facebook </a>
-            <a href="https://github.com/JudeBP"> Github </a>
+            <a href="#about-section" class="scroll"> Email </a>
+            <a href="https://www.facebook.com/judepasco/" target="_blank"  rel="noopener noreferrer"> Facebook </a>
+            <a href="https://github.com/JudeBP" target="_blank"  rel="noopener noreferrer"> Github </a>
         </div>
     </footer>
+
+    <!-- <script></script> -->
 
     <script src="js/typing.js"></script>
     <script src="js/nav.js"> </script>
     <script src="js/modal.js"> </script>
+
 </body>
 
 </html>
