Fixed Scroll and Added View Code Button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav class="header-nav">
             <div class="header-container">
-                <a href="#hero-section" class="header-logo">
+                <a class="header-logo home-btn">
                     <img src="images/Logo.png" alt="logo">
                 </a>
                 <div class="hamburger-menu">
