Modified header and hero style and animation; Added new project in projects section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header fixed-header">
         <nav class="header-nav">
             <div class="header-container">
                 <a class="header-logo home-btn">
@@ -33,8 +33,6 @@
         </nav>
     </header>
 
-    <!-- Modal - project details -->
-    <!-- MODAL transaction -->
     <div class="modal-overlay">
         <div class="modal-body">
             <div class="modal-title">
@@ -46,9 +44,7 @@
     </div>
 
 
-    <!-- Content -->
     <main class="content">
-        <!-- Hero Section -->
         <section class="section hero" id="hero-section">
             <div class="hero-container">
                 <h1> Hi, I'm a student programmer <br> and I love co<span class="typing" data-count='3000'
@@ -61,6 +57,15 @@
                             <img src="images/github-icon.svg" alt="github">
                         </a>
                         <a href="#contact-section"><img src="images/email-address.svg" alt="email"></a>
+                        <a href="https://www.linkedin.com/in/jude-pasco-b9155b115/" target='_blank' rel='noopener noreferrer'>
+                            <svg class="icon icon-linkedin2"><use xlink:href="#icon-linkedin2">
+                                <symbol id="icon-linkedin2" viewBox="0 0 32 32">
+                                    <path d="M12 12h5.535v2.837h0.079c0.77-1.381 2.655-2.837 5.464-2.837 5.842 0 6.922 3.637 6.922 8.367v9.633h-5.769v-8.54c0-2.037-0.042-4.657-3.001-4.657-3.005 0-3.463 2.218-3.463 4.509v8.688h-5.767v-18z"></path>
+                                    <path d="M2 12h6v18h-6v-18z"></path>
+                                    <path d="M8 7c0 1.657-1.343 3-3 3s-3-1.343-3-3c0-1.657 1.343-3 3-3s3 1.343 3 3z"></path>
+                                </symbol>
+                            </use></svg>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -75,23 +80,21 @@
                     <span><img src="images/mail.svg" class="email">: judepasco@gmail.com </span>
                 </div>
                 <div class="profile-description">
-                    <p> I'm Jude, a junior computer science student at the Polytechnic University of the Philippines.
-                        Most of my big projects are from school created by our group/team and programmed by me.
-                        I'm now starting my focus on web development and will be sharing more big and small projects
-                        soon. :)
+                    <p> I'm Jude, a computer science graduate from Polytechnic University of the Philippines. 
+                        Before recently graduating, I've worked on my own personal projects for school as 
+                        well as for the industry with teams full of talented people.
                     </p>
                     <div class="sm-container">
-                        <img src="images/html.svg">
-                        <img src="images/css.svg">
                         <img src="images/php.svg">
                         <img src="images/javascript.svg">
                         <img src="images/java-programming-language.svg">
-                        <img src="images/sql.svg">
+                        <img src="images/laravel.svg">
+                        <img src="images/vue.svg">
+                        <img src="images/ionic.svg">
                     </div>
                     <!-- <p> <b> What I use </b></p> -->
                     <div class="sm-container">
                         <img src="images/mysql.svg">
-                        <img src="images/figma.svg">
                         <img src="images/visual-studio-code.svg">
                         <img src="images/git.svg">
                     </div>
@@ -123,7 +126,7 @@
     <footer>
         <div class="sm-links">
             <a href="#about-section" class="scroll"> Email </a>
-            <a href="https://www.facebook.com/judepasco/" target="_blank"  rel="noopener noreferrer"> Facebook </a>
+            <a href="https://www.linkedin.com/in/jude-pasco-b9155b115/" target="_blank"  rel="noopener noreferrer"> LinkedIn </a>
             <a href="https://github.com/JudeBP" target="_blank"  rel="noopener noreferrer"> Github </a>
         </div>
     </footer>
