Removed student from hero section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="content">
         <section class="section hero" id="hero-section">
             <div class="hero-container">
-                <h1> Hi, I'm a student programmer <br> and I love co<span class="typing" data-count='3000'
+                <h1> Hi, I'm a programmer <br> and I love co<span class="typing" data-count='3000'
                         data-words='["ding.","ffee."]'></span> :) </h1>
                 <div class="btn-container">
                     <a href="#projects-section" class="btn-projects scroll"> My Projects </a>
